syntax = "proto3";

package order;

option go_package = "order-service/proto/orderpb";

// Описание сущности товара в заказе
message ProductItem {
  string product_id = 1;
  int32 quantity = 2;
}

// Описание заказа
message Order {
  string id = 1;
  string user_id = 2;
  repeated ProductItem items = 3;
  string status = 4;
  int64 created_at = 5;
}

// Запрос на создание заказа
message CreateOrderRequest {
  Order order = 1;
}

// Запрос на получение заказа по ID
message GetOrderRequest {
  string id = 1;
}

// Запрос на обновление статуса заказа
message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

// Запрос на получение заказов пользователя
message ListOrdersRequest {
  string user_id = 1;
}

// Ответ с одним заказом
message OrderResponse {
  Order order = 1;
}

// Ответ со списком заказов
message ListOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderByID(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  rpc ListUserOrders(ListOrdersRequest) returns (ListOrdersResponse);
}
